added some style to content

--- a/index.html
+++ b/index.html
@@ -1,67 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Epic Converter</title>
-    <link rel="stylesheet" href="./Styles/index.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-</head>
-<body>
-	<nav class="sidebar" id="sidebar" aria-label="sidebar-nav">
-		<div class="hamburger-menu" id="btnMenu">
-			<span></span>
-			<span></span>
-			<span></span>
-		</div>
-		<ul>
-			<li>celsius / farenheit / kelvin</li>
-			<li>cm / pouce</li>
-			<li>kilo / livre</li>
-			<li>km / miles</li>
-			<li>ampérage / voltage / resistance</li>
-		</ul>
-	</nav>
-	<nav class="navbar" id="navbar" aria-label="navbar">
-		<ul>
-			<li>celsius / farenheit / kelvin</li>
-			<li>cm / pouce</li>
-			<li>kilo / livre</li>
-			<li>km / miles</li>
-			<li>ampérage / voltage / resistance</li>
-		</ul>
-	</nav>
-	<main class="content" id="content">
-		<div id="celsius" class="converter celsius">
-			<h2>Convert to Celsius</h2>
-			<input type="text" placeholder="farenheit">
-			<input type="text" placeholder="kelvin">
-			<span><i class="fa-solid fa-repeat"></i></span>
-			<button type="submit">Convert</button>
-			<p id="celsiusResult"></p>
-		</div>
-		<div id="farenheit" class="converter farenheit">
-			<h2>Convert to Farenheit</h2>
-			<input type="text" placeholder="celsius">
-			<input type="text" placeholder="kelvin">
-			<span><i class="fa-solid fa-repeat"></i></span>
-			<button type="submit">Convert</button>
-			<p id="farenheitResult"></p>
-		</div>
-		<div id="kelvin" class="converter kelvin">
-			<h2>Convert to kelvin</h2>
-			<input type="text" placeholder="celsius">
-			<input type="text" placeholder="farenheit">
-			<span><i class="fa-solid fa-repeat"></i></span>
-			<button type="submit">Convert</button>
-			<p id="kelvinResult"></p>
-		</div>
-		<div id="2nd" class="converter 2nd"></div>
-		<div id="3rd" class="converter 3rd"></div>
-		<div id="4th" class="converter 4th"></div>
-		<div id="5ft" class="converter 5ft"></div>
-
-	</main>
-	<script src="index.js"></script>
-</body>
+    <link rel="stylesheet" href="./Styles/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <nav class="sidebar" id="sidebar" aria-label="sidebar-nav">
+      <div class="hamburger-menu" id="btnMenu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <ul>
+        <li>celsius / farenheit / kelvin</li>
+        <li>cm / pouce</li>
+        <li>kilo / livre</li>
+        <li>km / miles</li>
+        <li>ampérage / voltage / resistance</li>
+      </ul>
+    </nav>
+    <nav class="navbar" id="navbar" aria-label="navbar">
+      <ul>
+        <li>celsius / farenheit / kelvin</li>
+        <li>cm / pouce</li>
+        <li>kilo / livre</li>
+        <li>km / miles</li>
+        <li>ampérage / voltage / resistance</li>
+      </ul>
+    </nav>
+    <main class="content" id="content">
+      <div id="celsius" class="converter celsius">
+        <h2>Convert to Celsius</h2>
+        <input type="text" placeholder="enter temperature in farenheit" />
+        <input type="text" placeholder="enter temperature in kelvin" />
+        <div class="submit">
+          <span><i class="fa-solid fa-repeat"></i></span>
+          <button type="submit">Convert</button>
+        </div>
+        <p id="celsiusResult"></p>
+      </div>
+      <!-- <div id="farenheit" class="converter farenheit">
+        <h2>Convert to Farenheit</h2>
+        <input type="text" placeholder="celsius" />
+        <input type="text" placeholder="kelvin" />
+        <span><i class="fa-solid fa-repeat"></i></span>
+        <button type="submit">Convert</button>
+        <p id="farenheitResult"></p>
+      </div>
+      <div id="kelvin" class="converter kelvin">
+        <h2>Convert to kelvin</h2>
+        <input type="text" placeholder="celsius" />
+        <input type="text" placeholder="farenheit" />
+        <span><i class="fa-solid fa-repeat"></i></span>
+        <button type="submit">Convert</button>
+        <p id="kelvinResult"></p>
+      </div> -->
+      <!-- <div id="2nd" class="converter 2nd"></div>
+      <div id="3rd" class="converter 3rd"></div>
+      <div id="4th" class="converter 4th"></div>
+      <div id="5ft" class="converter 5ft"></div> -->
+    </main>
+    <script src="index.js"></script>
+  </body>
 </html>
