--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <span></span>
       </div>
       <ul>
-        <li>celsius / farenheit / kelvin</li>
-        <li>CM / IN</li>
-        <li>kilograms / pounds</li>
-        <li>km / miles</li>
-        <li>amperage / tension / resistance</li>
+        <li class="0">celsius / farenheit / kelvin</li>
+        <li class="1">CM / IN</li>
+        <li class="2">kilograms / pounds</li>
+        <li class="3">km / miles</li>
+        <li class="4">amperage / tension / resistance</li>
       </ul>
     </nav>
     <nav class="navbar" id="navbar" aria-label="navbar">
       <ul>
-        <li>celsius / farenheit / kelvin</li>
-        <li>CM / IN</li>
-        <li>kilograms / pounds</li>
-        <li>km / miles</li>
-        <li>amperage / tension / resistance</li>
+        <li class="0">celsius / farenheit / kelvin</li>
+        <li class="1">CM / IN</li>
+        <li class="2">kilograms / pounds</li>
+        <li class="3">km / miles</li>
+        <li class="4">amperage / tension / resistance</li>
       </ul>
     </nav>
     <main class="content" id="content">
