--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="text" placeholder="enter temperature in farenheit" />
         <input type="text" placeholder="enter temperature in kelvin" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="celsiusResult"></p>
@@ -50,7 +50,7 @@
         <input type="text" placeholder="celsius" />
         <input type="text" placeholder="kelvin" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="farenheitResult"></p>
@@ -60,7 +60,7 @@
         <input type="text" placeholder="celsius" />
         <input type="text" placeholder="farenheit" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="kelvinResult"></p>
@@ -69,7 +69,7 @@
         <h2>Convert to CM</h2>
         <input type="text" placeholder="Inches" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="cmResult"></p>
@@ -78,7 +78,7 @@
         <h2>Convert to Inches</h2>
         <input type="text" placeholder="CM" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="inResult"></p>
@@ -87,7 +87,7 @@
         <h2>Convert to Kilograms</h2>
         <input type="text" placeholder="Lbs" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="kgResult"></p>
@@ -96,7 +96,7 @@
         <h2>Convert to Pounds</h2>
         <input type="text" placeholder="Kg" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="lbsResult"></p>
@@ -105,7 +105,7 @@
         <h2>Convert to KM</h2>
         <input type="text" placeholder="Miles" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="kmResult"></p>
@@ -114,7 +114,7 @@
         <h2>Convert to Miles</h2>
         <input type="text" placeholder="KM" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="milesResult"></p>
@@ -124,7 +124,7 @@
         <input type="text" placeholder="enter your tension" />
         <input type="text" placeholder="enter your resistance" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="amperageResult"></p>
@@ -134,7 +134,7 @@
         <input type="text" placeholder="enter your amperage" />
         <input type="text" placeholder="enter your resistance" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="tensionResult"></p>
@@ -144,7 +144,7 @@
         <input type="text" placeholder="enter your amperage" />
         <input type="text" placeholder="enter your tension" />
         <div class="submit">
-          <span><i class="fa-solid fa-repeat"></i></span>
+          <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
         </div>
         <p id="resistanceResult"></p>
