--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Epic Converter</title>
+    <link rel="stylesheet" href="Styles/Style.css" />
     <link rel="stylesheet" href="./Styles/index.css" />
     <link
       rel="stylesheet"
@@ -13,9 +14,9 @@
   <body>
     <nav class="sidebar" id="sidebar" aria-label="sidebar-nav">
       <div class="hamburger-menu" id="btnMenu">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span class="lines"></span>
+        <span class="lines"></span>
+        <span class="lines"></span>
       </div>
       <ul>
         <li class="0">celsius / farenheit / kelvin</li>
