added html id and prepared last functions

--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
     <main class="content" id="content">
       <div id="celsius" class="converter">
         <h2>Convert to Celsius</h2>
-        <input type="text" placeholder="enter temperature in farenheit" />
-        <input type="text" placeholder="enter temperature in kelvin" />
+        <input
+          id="celsiusInput1"
+          type="text"
+          placeholder="enter temperature in farenheit"
+        />
+        <input
+          id="celsiusInput2"
+          type="text"
+          placeholder="enter temperature in kelvin"
+        />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -48,8 +56,8 @@
       </div>
       <div id="farenheit" class="converter">
         <h2>Convert to Farenheit</h2>
-        <input type="text" placeholder="celsius" />
-        <input type="text" placeholder="kelvin" />
+        <input id="farenheitInput1" type="text" placeholder="celsius" />
+        <input id="farenheitInput2" type="text" placeholder="kelvin" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -58,8 +66,8 @@
       </div>
       <div id="kelvin" class="converter">
         <h2>Convert to kelvin</h2>
-        <input type="text" placeholder="celsius" />
-        <input type="text" placeholder="farenheit" />
+        <input id="kelvinInput1" type="text" placeholder="celsius" />
+        <input id="kelvinInput2" type="text" placeholder="farenheit" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -68,7 +76,7 @@
       </div>
       <div id="cm" class="converter">
         <h2>Convert to CM</h2>
-        <input type="text" placeholder="Inches" />
+        <input id="cmInput" type="text" placeholder="Inches" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -77,7 +85,7 @@
       </div>
       <div id="in" class="converter">
         <h2>Convert to Inches</h2>
-        <input type="text" placeholder="CM" />
+        <input id="inInput" type="text" placeholder="CM" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -86,7 +94,7 @@
       </div>
       <div id="kg" class="converter">
         <h2>Convert to Kilograms</h2>
-        <input type="text" placeholder="Lbs" />
+        <input id="kgInput" type="text" placeholder="Lbs" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -95,7 +103,7 @@
       </div>
       <div id="lbs" class="converter">
         <h2>Convert to Pounds</h2>
-        <input type="text" placeholder="Kg" />
+        <input id="lbsInput" type="text" placeholder="Kg" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -104,7 +112,7 @@
       </div>
       <div id="km" class="converter">
         <h2>Convert to KM</h2>
-        <input type="text" placeholder="Miles" />
+        <input id="kmInput" type="text" placeholder="Miles" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -113,7 +121,7 @@
       </div>
       <div id="miles" class="converter">
         <h2>Convert to Miles</h2>
-        <input type="text" placeholder="KM" />
+        <input id="milesInput" type="text" placeholder="KM" />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -122,8 +130,16 @@
       </div>
       <div id="amperage" class="converter">
         <h2>Find the Amperage</h2>
-        <input type="text" placeholder="enter your tension" />
-        <input type="text" placeholder="enter your resistance" />
+        <input
+          id="amperageInput1"
+          type="text"
+          placeholder="enter your tension"
+        />
+        <input
+          id="amperageInput2"
+          type="text"
+          placeholder="enter your resistance"
+        />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -132,8 +148,16 @@
       </div>
       <div id="tension" class="converter">
         <h2>Find the Tension</h2>
-        <input type="text" placeholder="enter your amperage" />
-        <input type="text" placeholder="enter your resistance" />
+        <input
+          id="tensionInput1"
+          type="text"
+          placeholder="enter your amperage"
+        />
+        <input
+          id="tensionInput2"
+          type="text"
+          placeholder="enter your resistance"
+        />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
@@ -142,8 +166,16 @@
       </div>
       <div id="resistance" class="converter">
         <h2>Find the Resistance</h2>
-        <input type="text" placeholder="enter your amperage" />
-        <input type="text" placeholder="enter your tension" />
+        <input
+          id="resistanceInput1"
+          type="text"
+          placeholder="enter your amperage"
+        />
+        <input
+          id="resistanceInput2"
+          type="text"
+          placeholder="enter your tension"
+        />
         <div class="submit">
           <span class="nexts"><i class="fa-solid fa-repeat"></i></span>
           <button type="submit">Convert</button>
